--- a/FE_9_6_homework_js-intro/FE_9_6_homework_js-intro/homework/src/task1.html
+++ b/FE_9_6_homework_js-intro/FE_9_6_homework_js-intro/homework/src/task1.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Your code goes here -->
+    <script src="./js/task1.js"></script>
 </body>
 </html>
